# gate.cat

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPARISON.md  FACTS.md  LICENSE  MIGRATION.md  OBJECTIONS.md  PRICING.md  README.md  RECALL.md  SECURITY.md  TELEMETRY.md  THREAT_MODEL_CLOUD.md  danger_axis_result.json  install.ps1  pyproject.toml
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: veto-story.yml
.github/scripts/: metrics_snapshot.py
.github/workflows/: ci.yml  metrics.yml
cacheback/: __init__.py  _async_cache.py  _streaming.py  agent.py  anthropic.py  audit.py  bidirectional.py  cache.py  cli.py  codeblocks.py  exceptions.py  gate.py  index.py  koryto.py  koryto_sandbox.py  koryto_sources.py  negative.py  openai.py  pipeline.py  plan_verifier.py  provider.py  stagnation.py  store.py  synthesis.py  veto.py
cacheback/embedders/: __init__.py  _audio.py  clap.py  clip.py  minilm.py  whisper.py
cacheback/integrations/: __init__.py  _engine.py  _log.py  bypass_suite.py  crewai.py  guard.py  langgraph.py  policies.py
cacheback/proxy/: __init__.py  __main__.py  app.py  config.py  models.py
docs/: AUTOPILOT-LOOP.md  LAUNCH_0.4.16.md  LAUNCH_KIT_2026-07-14.md  SAMPLE_REPORT.md  THREAT_MODEL.md  coverage.html  index.html  install.sh  llms.txt  packs.html  partners.html  robots.txt  sitemap.xml  teams.html
docs/answers/: ai-agent-almost-ran-rm-rf.html  ai-agent-guardrails-across-a-team.html  audit-evidence-for-ai-agent-actions.html  claude-code-deleted-my-file.html  index.html  secure-mcp-server.html
docs/blog/: 1m-agent-commands.html
docs/demos/: demo_a.cast  demo_b.cast  gatecat-short-filter.txt
docs/launch/: POSTS.md  SHOW_HN.md
docs/research/: community-publications-2026-07-13.md  community-publications-2026-07-14.md  community-threads-2026-07-13.md
examples/: audit_sample.jsonl  veto_terraform.py
examples/dogfood/: README.md  false_block_rate.py  settings.json
examples/veto_integrations/: repro_autogen_7770.py  veto_autogen.py  veto_crewai.py  veto_langgraph.py
examples/veto_integrations/claude_code_hook/: README.md  settings.example.json  veto_hook.py
gatecat/: __init__.py  _async_cache.py  _nudge.py  _pack_hint.py  _setup_cli.py  action_pipeline.py  agent.py  anthropic.py  audit.py  bidirectional.py  branches.py  cache.py  cli.py  cloud_cli.py  cloud_crypto.py  cloud_reporter.py  codeblocks.py  exceptions.py  gate.py  index.py  koryto.py  koryto_sandbox.py  koryto_sources.py  negative.py  openai.py  pipeline.py  plan_verifier.py  provider.py  shell.py  stagnation.py  state_stagnation.py  store.py  synthesis.py  veto.py
gatecat/embedders/: __init__.py  _audio.py  clap.py  clip.py  minilm.py  whisper.py
gatecat/hooks/: __init__.py  claude_code.py
gatecat/integrations/: __init__.py  _audit.py  _engine.py  _log.py  action_analysis.py  bypass_suite.py  crewai.py  dashboard.py  deobfuscate.py  extra_policies.py  guard.py  input_guard.py  langgraph.py  ml_guard.py  policies.py  protection.py  rich_dashboard.py  rules.py  shell_stagnation.py
gatecat/integrations/models/: injection_lr.npz
gatecat/proxy/: __init__.py  __main__.py  app.py  config.py  local_guard.py  models.py
ops/: deploy_landing.sh
ops/launch/: OWNER_RUNBOOK.md  cc_80730_decision.md  distribution_kit_2026-07-22.md  followup_templates.md  lobsters_ready.md  mike_category_data_pack.md  release_0.4.18_checklist.md  release_0.4.19_checklist.md  reply_bank_objections.md  show_hn_ready.md
ops/nginx/: gatecat-analytics.conf  gatecat-site-analytics.inc  gatecat.site.conf
ops/partners/: welcome_pack.md
plugins/gatecat/: README.md
plugins/gatecat/.claude-plugin/: plugin.json
plugins/gatecat/hooks/: hooks.json
products/cloud/: affiliate.py  cloud_activate.py  cloud_server.py  finalize_ls.py  gatecat_fulfill.py
results/: million_recall_2026-07-08.json  million_recall_2026-07-08_passed.json
scripts/: README.md  audit_false_positive.py  corpus_eval.py  corpus_million.py  corpus_recall.py  daily_funnel.py  funnel_report.py  launch_metrics.py  recall_danger_axis.py
site/: veto-demo.html
tests/: conftest.py  test_affiliate.py  test_affiliate_stripe.py  test_anthropic.py  test_bidirectional.py  test_cache.py  test_cache_path_degradation.py  test_cli_audit.py  test_close153.py  test_cloud_cli.py  test_cloud_e2ee.py  test_cloud_reporter.py  test_cloud_server_hardening.py  test_codeblocks.py  test_daily_funnel.py  test_embedders.py  test_false_positive.py  test_freecore_override.py  test_freecore_stagnation.py  test_freecore_state_gatewatch.py  test_freecore_toggle.py  test_funnel_report.py  test_installer_marketing.py  test_koryto.py  test_koryto_proxy.py  test_koryto_sandbox.py  test_koryto_sources.py  test_marketing_consistency.py  test_negative.py  test_nudge.py  test_nudge_cli.py  test_openai.py  test_pack_hint.py  test_pack_stripe.py  test_paid_dashboard_redline.py  test_paid_ledger.py  test_paid_lemonsqueezy.py  test_paid_proxy_budget.py  test_paid_stripe.py  test_paid_tier_gating.py  (+25 more)
tests/integrations/: conftest.py  test_action_analysis.py  test_adapters.py  test_audit_compliance.py  test_block_outranks_warn.py  test_bypass_suite.py  test_claude_code_hook.py  test_content_vs_command.py  test_dashboard.py  test_ephemeral_disarm.py  test_extra_policies.py  test_gatecat_shell.py  test_hook_contract.py  test_iam_backup_http_defaults.py  test_input_guard.py  test_kms_vault_defaults.py  test_ml_guard.py  test_policies_and_log.py  test_real_frameworks.py  test_recall_gap_classes.py  test_repro_autogen_7770.py  test_rules.py  test_write_content_data.py
